Fix overlapping text

--- a/ch2/ems-rems/panel/style.css
+++ b/ch2/ems-rems/panel/style.css
@@ -3,17 +3,14 @@
 }
 
 body {
-  /* Descendant elements inherit the calculated value (19.2 px) */
-  line-height: 1.2em;
+  line-height: 1.2;
 }
 
 .about-us {
-  /* Evaluates to 32 px */
   font-size: 2em;
 }
 
 .panel {
-  /* establishes predictable font-size for the component */
   font-size: 1rem;
   padding: 1em;
   border-radius: 0.5em;
@@ -22,7 +19,6 @@ body {
 
 .panel > h2 {
   margin-top: 0;
-  /* uses ems to make other fonts relative to the established parent font size */
   font-size: 0.8em;
   font-weight: bold;
   text-transform: uppercase;
